feat(api): add conditional Task List validators (#39)
